<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:scrollbars="none"
    android:splitMotionEvents="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/llEnterOtpFrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/login_circle_logo" />

        <TextView
            android:id="@+id/tvVerifyPhText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:text="@string/verifyPhoneNumber"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tvOtpSentMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/otpSentMsg"
            android:textSize="@dimen/_12sdp" />


        <TextView
            android:id="@+id/tvEnterOtpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:text="@string/enterTheOtp"
            android:textSize="@dimen/_12sdp" />

        <com.goodiebag.pinview.Pinview
            android:id="@+id/pinview"
            app:pinBackground="@drawable/example_drawable"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:pinWidth="@dimen/_26sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            app:pinHeight="@dimen/_30sdp"
            app:pinLength="6"
            app:cursorVisible="false"
            app:forceKeyboard="true"
            app:hint="-"
            app:inputType="number"
            app:password="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.app.ernext.customUiComponents.QuicksandMediumTextview
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5sdp"
                android:gravity="center"
                android:textSize="@dimen/_12sdp"
                android:text="60"
                android:textColor="@color/colorPrimary" />

            <com.app.ernext.customUiComponents.QuicksandMediumTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:id="@+id/tvSecs"
                android:textSize="@dimen/_12sdp"
                android:text="seconds" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llDidntReceiveOtpResend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:gravity="right"
                android:padding="@dimen/_5sdp"
                android:text="@string/didntReceiveOtp"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tvResendOtp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:gravity="left"
                android:text="@string/resendOtp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>


        <Button
            android:id="@+id/btSubmitEnterOtp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:enabled="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/rounded_corner_button"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>
</ScrollView>